[gd_scene load_steps=3 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://vt323_64.tres" type="DynamicFont" id=2]

[node name="Game" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Title" type="RichTextLabel" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 296.0
margin_top = 55.0
margin_right = 669.0
margin_bottom = 127.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/default_color = Color( 0.232849, 0.851563, 0.329523, 1 )
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Number Guesser"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "Rect", "Size Flags", "custom_colors", "custom_fonts" ]

[node name="Message" type="RichTextLabel" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 144.0
margin_top = 210.0
margin_right = 860.0
margin_bottom = 287.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/default_color = Color( 0.231373, 0.85098, 0.329412, 1 )
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "fdsfsdf"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="Greater" type="Button" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 663.0
margin_top = 334.0
margin_right = 914.0
margin_bottom = 457.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.231373, 0.85098, 0.329412, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Greater"
flat = false
align = 1
_sections_unfolded = [ "custom_colors", "custom_fonts", "custom_styles" ]

[node name="Lesser" type="Button" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 102.0
margin_top = 337.0
margin_right = 353.0
margin_bottom = 460.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.231373, 0.85098, 0.329412, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Lesser"
flat = false
align = 1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="Correct" type="Button" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 383.0
margin_top = 486.0
margin_right = 634.0
margin_bottom = 571.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.231373, 0.85098, 0.329412, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Correct"
flat = false
align = 1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[connection signal="pressed" from="Greater" to="." method="_on_Greater_pressed"]

[connection signal="pressed" from="Lesser" to="." method="_on_Lesser_pressed"]

[connection signal="pressed" from="Correct" to="." method="_on_Correct_pressed"]


